--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -281,7 +281,11 @@
   }
 }
 .footer .footer__details .footer__detail .footer__icon {
-  font-size: 20px;
+  font-size: 1.2rem;
+}
+.footer .footer__details .footer__detail .footer__icon--rounded {
+  position: relative;
+  bottom: 1px;
 }
 .footer .footer__details .footer__detail .footer__link {
   color: #eaebed;
