--- a/assets/stylesheets/modules/_summary.scss
+++ b/assets/stylesheets/modules/_summary.scss
@@ -30,7 +30,18 @@
         padding: 0;
 
         .summary__item {
-          padding: 4px 8px;
+          padding: 4px 12px;
+
+          .summary__icon {
+            width: 15px;
+            height: 15px;
+            padding: 0 4px 0 0;
+
+            &--svg {
+              position: relative;
+              top: 1px;    
+            }
+          }
         }
       }
     }
