--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -140,7 +140,16 @@
   padding: 0;
 }
 .summary .summary__container .summary__section .summary__list .summary__item {
-  padding: 4px 8px;
+  padding: 4px 12px;
+}
+.summary .summary__container .summary__section .summary__list .summary__item .summary__icon {
+  width: 15px;
+  height: 15px;
+  padding: 0 4px 0 0;
+}
+.summary .summary__container .summary__section .summary__list .summary__item .summary__icon--svg {
+  position: relative;
+  top: 1px;
 }
 .summary .summary__image {
   margin-left: 36px;
