--- a/assets/stylesheets/modules/_projects.scss
+++ b/assets/stylesheets/modules/_projects.scss
@@ -13,7 +13,7 @@
     display: grid;
     grid-template: 1fr 1fr / 1fr 1fr;
 
-    @include breakpoints.tablet {
+    @include breakpoints.small-desktop {
       display: flex;
       flex-direction: column;
     }
@@ -22,7 +22,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 12px 60px;
+      padding: 12px;
+      margin-bottom: 48px;
 
       @include breakpoints.phone {
         padding: 0;
@@ -31,6 +32,7 @@
       .project__heading {
         margin: 0 0 24px;
         font-size: 2rem;
+        text-align: center;
       }
 
       .project__image-container {
@@ -38,23 +40,30 @@
         justify-content: center;
 
         .project__image {
-          height: 300px;
+          height: 272px;
           margin: 0;
           border: none;
 
           @include breakpoints.small-desktop {
-            height: 240px;
-          }
-
-          @include breakpoints.tablet {
             width: 100%;
-            height: unset;
+            height: 400px;
           }
         }
       }
 
       .project__para {
         @include shared-styles.para-styles;
+        width: 540px;
+        padding-top: 8px;
+
+        @include breakpoints.small-desktop {
+          width: 800px;
+          text-align: center;
+        }
+
+        @include breakpoints.tablet {
+          width: 100%;
+        }
       }
     }
   }
