--- a/assets/stylesheets/modules/_summary.scss
+++ b/assets/stylesheets/modules/_summary.scss
@@ -8,10 +8,34 @@
   .summary__container {
     display: flex;
     flex-direction: column;
-    width: 600px;
+    margin: 0 40px 80px;
+    font-size: 1.5rem;
+
+    @include breakpoints.medium-desktop {
+      width: 600px;
+      font-size: 1.3rem;
+    }
+
+    @include breakpoints.small-desktop {
+      font-size: 1.2rem;
+    }
+
+    @include breakpoints.tablet {
+      margin-bottom: 180px;
+    }
+
+    @include breakpoints.phone {
+      margin: 180px 20px 260px;
+    }
 
     .summary__section {
-      padding: 0 0 32px;
+      &--top {
+        margin-bottom: 44px;
+
+        @include breakpoints.phone {
+          margin-bottom: 32px;
+        }
+      }
 
       .summary__heading {
         @include shared-styles.heading-styles;
@@ -33,13 +57,23 @@
           padding: 4px 12px;
 
           .summary__icon {
-            width: 15px;
-            height: 15px;
-            padding: 0 4px 0 0;
+            width: 23px;
+            height: 23px;
+            padding-right: 8px;
+
+            @include breakpoints.medium-desktop {
+              width: 15px;
+              height: 15px;
+              padding-right: 4px;
+            }
 
             &--svg {
               position: relative;
-              top: 1px;    
+              top: 3px;
+
+              @include breakpoints.medium-desktop {
+                top: 1px;
+              }
             }
           }
         }
@@ -48,12 +82,13 @@
   }
 
   .summary__image {
-    margin-left: 36px;
+    margin-right: 40px;
+    margin-bottom: 80px;
     height: 400px;
     border: 10px solid pallette.$secondary-color;
 
     @include breakpoints.small-desktop {
-      height: 280px;
+      height: 320px;
     }
 
     @include breakpoints.tablet {
