--- a/assets/stylesheets/partials/_breakpoints.scss
+++ b/assets/stylesheets/partials/_breakpoints.scss
@@ -21,3 +21,9 @@ $xxl: 1400px;
     @content;
   }
 }
+
+@mixin medium-desktop {
+  @media only screen and (max-width: $xxl) {
+    @content;
+  }
+}
