--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -17,13 +17,23 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
-  margin: 0;
-  padding-left: 32px;
   flex-wrap: nowrap;
+  margin: 0;
+  padding: 8px 0 8px 36px;
   color: #eaebed;
-  font-size: 1.4rem;
+  font-size: 2rem;
   text-align: center;
   text-shadow: 1px 1px 2px black;
+}
+@media only screen and (max-width: 1400px) {
+  .navbar .navbar__heading {
+    font-size: 1.6rem;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .navbar .navbar__heading {
+    font-size: 1.4rem;
+  }
 }
 @media only screen and (max-width: 992px) {
   .navbar .navbar__heading {
@@ -79,33 +89,68 @@
   font-weight: 700;
   text-decoration: none;
   text-shadow: 1px 1px 2px black;
-  height: 48px;
+  height: 70px;
   margin: 0;
-  font-size: 1rem;
+  font-size: 1.2rem;
+}
+@media only screen and (max-width: 1400px) {
+  .navbar .navbar__buttons .navbar__button .navbar__link {
+    height: 54px;
+    font-size: 1.1rem;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .navbar .navbar__buttons .navbar__button .navbar__link {
+    height: 48px;
+    font-size: 1rem;
+  }
 }
 
 .summary {
   display: flex;
   justify-content: center;
-  padding: 88px 24px 160px;
-}
-@media only screen and (max-width: 992px) {
-  .summary {
-    padding-bottom: 240px;
-  }
+  align-items: center;
+  height: 100vh;
 }
 @media only screen and (max-width: 768px) {
   .summary {
-    padding: 208px 24px 240px;
+    height: unset;
   }
 }
 .summary .summary__container {
   display: flex;
   flex-direction: column;
-  width: 600px;
+  margin: 0 40px 80px;
+  font-size: 1.5rem;
 }
-.summary .summary__container .summary__section {
-  padding: 0 0 32px;
+@media only screen and (max-width: 1400px) {
+  .summary .summary__container {
+    width: 600px;
+    font-size: 1.3rem;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .summary .summary__container {
+    font-size: 1.2rem;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .summary .summary__container {
+    margin-bottom: 180px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .summary .summary__container {
+    margin: 180px 20px 260px;
+  }
+}
+.summary .summary__container .summary__section--top {
+  margin-bottom: 44px;
+}
+@media only screen and (max-width: 768px) {
+  .summary .summary__container .summary__section--top {
+    margin-bottom: 32px;
+  }
 }
 .summary .summary__container .summary__section .summary__heading {
   margin: 0 0 16px;
@@ -113,9 +158,24 @@
   font-size: 2.5rem;
   line-height: 1;
 }
+@media only screen and (max-width: 1200px) {
+  .summary .summary__container .summary__section .summary__heading {
+    font-size: 2.3rem;
+  }
+}
 .summary .summary__container .summary__section .summary__para {
-  margin: 8px 0;
+  margin: 28px 0;
   text-align: justify;
+}
+@media only screen and (max-width: 1200px) {
+  .summary .summary__container .summary__section .summary__para {
+    margin: 16px 0;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .summary .summary__container .summary__section .summary__para {
+    margin: 16px 0;
+  }
 }
 .summary .summary__container .summary__section .summary__para--link-container {
   margin: 12px 0 0;
@@ -143,22 +203,35 @@
   padding: 4px 12px;
 }
 .summary .summary__container .summary__section .summary__list .summary__item .summary__icon {
-  width: 15px;
-  height: 15px;
-  padding: 0 4px 0 0;
+  width: 23px;
+  height: 23px;
+  padding-right: 8px;
+}
+@media only screen and (max-width: 1400px) {
+  .summary .summary__container .summary__section .summary__list .summary__item .summary__icon {
+    width: 15px;
+    height: 15px;
+    padding-right: 4px;
+  }
 }
 .summary .summary__container .summary__section .summary__list .summary__item .summary__icon--svg {
   position: relative;
-  top: 1px;
+  top: 3px;
+}
+@media only screen and (max-width: 1400px) {
+  .summary .summary__container .summary__section .summary__list .summary__item .summary__icon--svg {
+    top: 1px;
+  }
 }
 .summary .summary__image {
-  margin-left: 36px;
+  margin-right: 40px;
+  margin-bottom: 80px;
   height: 400px;
   border: 10px solid #0b3173;
 }
 @media only screen and (max-width: 1200px) {
   .summary .summary__image {
-    height: 280px;
+    height: 320px;
   }
 }
 @media only screen and (max-width: 992px) {
@@ -170,17 +243,29 @@
 .projects {
   display: flex;
   justify-content: center;
-  padding: 88px 24px 160px;
+  align-items: center;
+  height: 100vh;
   flex-direction: column;
+  margin: 380px 0 400px;
+}
+@media only screen and (max-width: 768px) {
+  .projects {
+    height: unset;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .projects {
+    margin: 1160px 0 1180px;
+  }
 }
 @media only screen and (max-width: 992px) {
   .projects {
-    padding-bottom: 240px;
+    margin: 1140px 0 1260px;
   }
 }
 @media only screen and (max-width: 768px) {
   .projects {
-    padding: 208px 24px 240px;
+    margin: 180px 0 220px;
   }
 }
 .projects .projects__heading {
@@ -188,6 +273,11 @@
   text-align: center;
   font-size: 2.5rem;
   line-height: 1;
+}
+@media only screen and (max-width: 1200px) {
+  .projects .projects__heading {
+    font-size: 2.3rem;
+  }
 }
 .projects .projects__gallery {
   display: grid;
@@ -203,12 +293,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 12px;
-  margin-bottom: 48px;
+  padding: 24px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 24px;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1400px) {
   .projects .projects__gallery .projects__project {
-    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 .projects .projects__gallery .projects__project .project__heading {
@@ -232,10 +325,21 @@
   }
 }
 .projects .projects__gallery .projects__project .project__para {
-  margin: 8px 0;
+  margin: 28px 0;
   text-align: justify;
   width: 540px;
   padding-top: 8px;
+  font-size: 1.4rem;
+}
+@media only screen and (max-width: 1200px) {
+  .projects .projects__gallery .projects__project .project__para {
+    margin: 16px 0;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .projects .projects__gallery .projects__project .project__para {
+    margin: 16px 0;
+  }
 }
 .projects .projects__gallery .projects__project .project__para--link-container {
   margin: 12px 0 0;
@@ -262,6 +366,17 @@
     width: 100%;
   }
 }
+@media only screen and (max-width: 768px) {
+  .projects .projects__gallery .projects__project .project__para {
+    padding: 0;
+    font-size: 1.2rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .projects .projects__gallery .projects__project .project__para--link-container {
+    font-size: 1.2rem;
+  }
+}
 
 .footer {
   background-color: #014421;
@@ -277,8 +392,18 @@
 .footer .footer__heading {
   margin: 0;
   padding: 0 0 16px;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   letter-spacing: 0.1rem;
+}
+@media only screen and (max-width: 1400px) {
+  .footer .footer__heading {
+    font-size: 1.5rem;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .footer .footer__heading {
+    font-size: 1.4rem;
+  }
 }
 .footer .footer__details {
   display: flex;
@@ -292,7 +417,12 @@
 }
 .footer .footer__details .footer__detail {
   margin: 0 20px;
-  font-size: 1rem;
+  font-size: 1.2rem;
+}
+@media only screen and (max-width: 1200px) {
+  .footer .footer__details .footer__detail {
+    font-size: 1rem;
+  }
 }
 @media only screen and (max-width: 992px) {
   .footer .footer__details .footer__detail {
@@ -315,7 +445,7 @@
 
 @-moz-document url-prefix() {
   html {
-    font-size: 18px;
+    font-size: 1.125rem;
   }
 }
 body {
