--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -246,11 +246,16 @@
   align-items: center;
   height: 100vh;
   flex-direction: column;
-  margin: 380px 0 400px;
+  margin: 420px 0;
 }
 @media only screen and (max-width: 768px) {
   .projects {
     height: unset;
+  }
+}
+@media only screen and (max-width: 1400px) {
+  .projects {
+    margin: 500px 0 520px;
   }
 }
 @media only screen and (max-width: 1200px) {
@@ -260,12 +265,12 @@
 }
 @media only screen and (max-width: 992px) {
   .projects {
-    margin: 1140px 0 1260px;
+    margin: 1120px 0 1240px;
   }
 }
 @media only screen and (max-width: 768px) {
   .projects {
-    margin: 180px 0 220px;
+    margin: 180px 0 200px;
   }
 }
 .projects .projects__heading {
@@ -294,9 +299,7 @@
   flex-direction: column;
   align-items: center;
   padding: 24px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-bottom: 24px;
+  margin: 0 40px 24px;
 }
 @media only screen and (max-width: 1400px) {
   .projects .projects__gallery .projects__project {
@@ -314,11 +317,11 @@
   justify-content: center;
 }
 .projects .projects__gallery .projects__project .project__image-container .project__image {
-  height: 272px;
+  height: 300px;
   margin: 0;
   border: none;
 }
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1400px) {
   .projects .projects__gallery .projects__project .project__image-container .project__image {
     width: 100%;
     height: 400px;
